--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "exceljs": "^4.4.0",
+    "iron-session": "^8.0.4",
     "next": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
