--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "npx prisma migrate deploy && prisma generate",
+    "seed": "ts-node seed/seed.ts",
     "prisma:studio": "prisma studio",
     "db:seed": "prisma db seed"
   },
@@ -40,6 +41,7 @@
     "postcss": "^8.4.49",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.14",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
